grammar.js
    model: $ => seq(
      repeat($._model_statement),
      optional(seq(
        $.data,
        repeat($._data_statement),
      )),
    ),

    _model_statement: $ => choice(
      $.set,
      $.param,
      $.var,
      $.constraint,
      $.objective,
      $.solve,
      $.check,
      $.display,
      $.printf,
      $.for,
      $.table,
      $.end,
    ),

    _data_statement: $ => choice(
      $.set_data,
      $.param_data,
      $.end,
    ),

    set: $ => seq(
      'set',
      alias($.symbolic_name, $.model_object),
      optional(alias($.string, $.alias)),
      optional($.indexing_expression),
      repeat(seq(optional(','), alias($.set_attrib, $.attribute))),
      ';',
    ),

    param: $ => seq(
      'param',
      alias($.symbolic_name, $.model_object),
      optional(alias($.string, $.alias)),
      optional($.indexing_expression),
      repeat(seq(optional(','), alias($.param_attrib, $.attribute))),
      ';',
    ),

    objective: $ => seq(
      choice('maximize', 'minimize'),
      alias($.symbolic_name, $.model_object),
      optional(alias($.string, $.alias)),
      optional($.indexing_expression),
      ':',
      $.linear_expression,
      ';',
    ),

    check: $ => seq(
      'check',
      optional($.indexing_expression),
      optional(':'),
      alias($.log_expr, $.expr),
      ';',
    ),

    display: $ => seq(
      'display',
      optional($.indexing_expression),
      optional(':'),
      sep1(alias(choice($.num_expr, $.sym_expr, $.log_expr), $.expr), ','),
      ';',
    ),

    printf: $ => seq(
      'printf',
      optional($.indexing_expression),
      optional(':'),
      alias(choice($.num_expr, $.sym_expr, $.log_expr), $.expr),
      repeat(prec(PREC.OUTPUT, seq(
        ',',
        alias(choice($.num_expr, $.sym_expr, $.log_expr), $.expr),
      ))),
      optional(seq(
        alias(choice('>', '>>'), $.operator),
        alias($.sym_expr, $.expr),
      )),
      ';',
    ),

    for: $ => seq(
      'for',
      $.indexing_expression,
      optional(':'),
      choice(
        choice($.check, $.display, $.printf, $.for),
        seq(
          '{',
          repeat1(choice($.check, $.display, $.printf, $.for)),
          '}',
        ),
      ),
    ),

    table: $ => seq(
      'table',
      $.symbolic_name,
      optional(alias($.string, $.alias)),
      choice(
        $._input_table,
        $._output_table,
      ),
      ';',
    ),

    _input_table: $ => seq(
      'IN',
      repeat1($.sym_expr),      // driver + args
      ':',
      optional(seq($.symbolic_name, '<-')),
      '[',
      sep1($.symbolic_name, ','),
      ']',
      optional(seq(
        ',',
        $.symbolic_name,
        optional(seq('~', $.symbolic_name)),
        repeat(seq(
          ',',
          $.symbolic_name,
          optional(seq('~', $.symbolic_name)),
        )),
      )),
    ),

    _output_table: $ => seq(
      optional($.indexing_expression),
      'OUT',
      repeat1($.sym_expr),      // driver + args
      ':',
      choice($.num_expr, $.sym_expr),
      optional(seq('~', $.symbolic_name)),
      repeat(seq(
        ',',
        choice($.num_expr, $.sym_expr),
        optional(seq('~', $.symbolic_name)),
      )),
    ),

    //
    // Data statements
    //

    num_expr: $ => choice(
      prec.left(seq($._primary_num_expr, optional($.suffix))),

      // Arithmetic operators
      prec.left(PREC.UNARY, seq(
        alias(choice('+', '-'), $.operator),
        alias($.num_expr, $.expr),
      )),
      prec.left(PREC.ADD, seq(
        alias($.num_expr, $.expr),
        alias(choice('+', '-', 'less'), $.operator),
        alias($.num_expr, $.expr),
      )),
      prec.left(PREC.MUL, seq(
        alias($.num_expr, $.expr),
        alias(choice('*', '/', 'div', 'mod'), $.operator),
        alias($.num_expr, $.expr),
      )),
      prec.right(PREC.EXP, seq(
        alias($.num_expr, $.expr),
        alias(choice('**', '^'), $.operator),
        alias($.num_expr, $.expr),
      )),
    ),

    _primary_num_expr: $ => choice(
      $.number,
      seq($.symbolic_name, optional($.subscript)),
      $.function_call,
      alias($.iterated_num_expr, $.iterated_expression),
      alias($.conditional_num_expr, $.conditional_expression),
      seq('(', alias($.num_expr, $.expr), ')'),
    ),

    sym_expr: $ => choice(
      $._primary_sym_expr,

      // Symbolic operator
      prec.left(PREC.CONCAT, seq(
        alias(choice($.sym_expr, $.num_expr), $.expr),
        alias('&', $.operator),
        alias(choice($.sym_expr, $.num_expr), $.expr),
      )),
    ),

    _primary_sym_expr: $ => choice(
      $.string,
      seq($.symbolic_name, optional($.subscript)),
      $.function_call,
      alias($.conditional_sym_expr, $.conditional_expression),
      seq('(', alias($.sym_expr, $.expr), ')'),
    ),

    indexing_expression: $ => seq(
      '{',
      sep1($.indexing_entry, ','),
      optional(seq(':', alias($.log_expr, $.expr))),
      '}',
    ),

    indexing_entry: $ => choice(
      alias($.set_expr, $.expr),
      seq(
        $.symbolic_name,
        alias('in', $.operator),
        alias($.set_expr, $.expr),
      ),
      seq(
        '(',
        alias(choice($.num_expr, $.sym_expr), $.expr),
        repeat(seq(',', alias(choice($.num_expr, $.sym_expr), $.expr))),
        ')',
        alias('in', $.operator),
        alias($.set_expr, $.expr),
      ),
    ),

    literal_set: $ => seq(
      '{',
      optional(choice(
        sep1(choice($.num_expr, $.sym_expr), ','),
        sep1($.tupel, ','),
      )),
      '}',
    ),

    tupel: $ => prec.left(1, seq(
      '(',
      alias(choice($.num_expr, $.sym_expr), $.expr),
      repeat(seq(',', alias(choice($.num_expr, $.sym_expr), $.expr))),
      ')',
    )),

    linear_expression: $ => prec.left(choice(
      $._primary_linear_expr,

      // Arithmetic operators
      prec.left(PREC.UNARY, seq(
        alias(choice('+', '-'), $.operator),
        alias($.linear_expression, $.expr),
      )),
      prec.left(PREC.ADD, seq(
        alias($.linear_expression, $.expr),
        alias(choice('+', '-', 'less'), $.operator),
        alias($.linear_expression, $.expr),
      )),
      prec.left(PREC.MUL, seq(
        alias($.linear_expression, $.expr),
        alias(choice('*', '/', 'div', 'mod'), $.operator),
        alias($.linear_expression, $.expr),
      )),
      prec.right(PREC.EXP, seq(
        alias($.linear_expression, $.expr),
        alias(choice('**', '^'), $.operator),
        alias($.linear_expression, $.expr),
      )),
    )),

    _primary_linear_expr: $ => prec(1, choice(
      alias($.num_expr, $.expr),
      seq($.symbolic_name, optional($.subscript)),
      // Iterated linear expression
      //seq('sum', $.indexing_expression, $.linear_expression),
      alias($.conditional_linear_expr, $.conditional_expression),
      seq('(', $.linear_expression, ')'),
    )),

    subscript: $ => seq(
      '[',
      sep1(alias(choice($.num_expr, $.sym_expr), $.expr), ','),
      ']',
    ),

    function_call: $ => seq(
      $.function_name,
      '(',
      optional(sep1(
        alias(choice($.num_expr, $.sym_expr, $.set_expr), $.expr),
        ',')),
      ')',
    ),

    function_name: _ => choice(
      'Irand224',
      'Normal',
      'Normal01',
      'Uniform',
      'Uniform01',
      'abs',
      'atan',
      'card',
      'ceil',
      'cos',
      'exp',
      'floor',
      'gmtime',
      'length',
      'log',
      'log10',
      'max',
      'min',
      'round',
      'sin',
      'sqrt',
      'str2time',
      'substr',
      'tan',
      'time2str',
      'trunc',
    ),

    suffix: $ => token.immediate(/.(lb|ub|status|val|dual)/),

    // Implemented in external parser to handle the comment starter
    // string: $ => choice(
    //   seq("'", repeat(choice(/[^'\\]+/, /\\./, "''")), "'"),
    //   seq('"', repeat(choice(/[^"\\]+/, /\\./, '""')), '"'),
    // ),

    symbolic_name: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
    comment: $ => choice(
      /#.*/,
      seq('/*', repeat(choice(/[^*]+/, /\*[^\/]/, /\\n/)), '*/'),
    ),
  },
});

function sep1(rule, sep) {
  return seq(rule, repeat(prec(1, seq(sep, rule))));
}
