test/corpus/display.txt
================================================================================
display multiple variables
================================================================================
display: 'x =', x, 'y =', y, 'z =', z;
--------------------------------------------------------------------------------

(model
  (display
    (expr
      (string))
    (expr
      (symbolic_name))
    (expr
      (string))
    (expr
      (symbolic_name))
    (expr
      (string))
    (expr
      (symbolic_name))))

================================================================================
display expression value
================================================================================
display sqrt(x ** 2 + y ** 2 + z ** 2);
--------------------------------------------------------------------------------

(model
  (display
    (expr
      (function_call
        (function_name)
        (expr
          (expr
            (expr
              (expr
                (symbolic_name))
              (operator)
              (expr
                (number)))
            (operator)
            (expr
              (expr
                (symbolic_name))
              (operator)
              (expr
                (number))))
          (operator)
          (expr
            (expr
              (symbolic_name))
            (operator)
            (expr
              (number))))))))

================================================================================
display set
================================================================================
display{i in I, j in J}: i, j, a[i,j], b[i,j];
--------------------------------------------------------------------------------

(model
  (display
    (indexing_expression
      (indexing_entry
        (symbolic_name)
        (operator)
        (expr
          (symbolic_name)))
      (indexing_entry
        (symbolic_name)
        (operator)
        (expr
          (symbolic_name))))
    (expr
      (symbolic_name))
    (expr
      (symbolic_name))
    (expr
      (symbolic_name)
      (subscript
        (expr
          (symbolic_name))
        (expr
          (symbolic_name))))
    (expr
      (symbolic_name)
      (subscript
        (expr
          (symbolic_name))
        (expr
          (symbolic_name))))))
