test/corpus/param.txt
================================================================================
param with integer number
================================================================================
param x := 123;
--------------------------------------------------------------------------------

(model
  (statement
    (param
      (symbolic_name)
      (attribute
        (expr
          (number))))))

================================================================================
param with floating number
================================================================================
param x := 3.14159;
--------------------------------------------------------------------------------

(model
  (statement
    (param
      (symbolic_name)
      (attribute
        (expr
          (number))))))

================================================================================
param with scientific number
================================================================================
param x := 56.E+5;
--------------------------------------------------------------------------------

(model
  (statement
    (param
      (symbolic_name)
      (attribute
        (expr
          (number))))))

================================================================================
param with fractional number
================================================================================
param x := .78;
--------------------------------------------------------------------------------

(model
  (statement
    (param
      (symbolic_name)
      (attribute
        (expr
          (number))))))

================================================================================
param with small scientific number
================================================================================
param x := 123.456e-7;
--------------------------------------------------------------------------------

(model
  (statement
    (param
      (symbolic_name)
      (attribute
        (expr
          (number))))))

================================================================================
param with single bound
================================================================================
param units{raw, prd} >= 0;
--------------------------------------------------------------------------------

(model
  (statement
    (param
      (symbolic_name)
      (indexing_expression
        (indexing_entry
          (expr
            (symbolic_name)))
        (indexing_entry
          (expr
            (symbolic_name))))
      (attribute
        (expr
          (number))))))

================================================================================
param with multiple bounds
================================================================================
param N := 20 integer >= 0 <= 100;
--------------------------------------------------------------------------------

(model
  (statement
    (param
      (symbolic_name)
      (attribute
        (expr
          (number)))
      (attribute)
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number))))))

================================================================================
param with alias and conditional value
================================================================================
param comb 'n choose k' {n in 0..N, k in 0..n} :=
  if k = 0 or k = n then 1 else comb[n-1,k-1] + comb[n-1,k];
--------------------------------------------------------------------------------

(model
  (statement
    (param
      (symbolic_name)
      (alias)
      (indexing_expression
        (indexing_entry
          (symbolic_name)
          (expr
            (expr
              (number))
            (expr
              (symbolic_name))))
        (indexing_entry
          (symbolic_name)
          (expr
            (expr
              (number))
            (expr
              (symbolic_name)))))
      (attribute
        (expr
          (conditional_expression
            (expr
              (expr
                (expr
                  (symbolic_name))
                (operator)
                (expr
                  (number)))
              (operator)
              (expr
                (expr
                  (symbolic_name))
                (operator)
                (expr
                  (symbolic_name))))
            (expr
              (number))
            (expr
              (expr
                (symbolic_name)
                (subscript
                  (expr
                    (expr
                      (symbolic_name))
                    (operator)
                    (expr
                      (number)))
                  (expr
                    (expr
                      (symbolic_name))
                    (operator)
                    (expr
                      (number)))))
              (operator)
              (expr
                (symbolic_name)
                (subscript
                  (expr
                    (expr
                      (symbolic_name))
                    (operator)
                    (expr
                      (number)))
                  (expr
                    (symbolic_name)))))))))))

================================================================================
param with symbolic restriction
================================================================================
param month symbolic default 'May' in {'Mar', 'Apr', 'May'};
--------------------------------------------------------------------------------

(model
  (statement
    (param
      (symbolic_name)
      (attribute)
      (attribute
        (expr
          (string)))
      (attribute
        (expr
          (literal_set
            (sym_expr
              (string))
            (sym_expr
              (string))
            (sym_expr
              (string))))))))

================================================================================
param with mixed symbolic and numeric expressions
================================================================================
param days_in_month{m in 1..12}, integer, >= 28, <= 31, :=
      (str2time(year + (if m < 12 then 0 else 1) & "-" &
         (if m < 12 then m+1 else 1) & "-01", "%Y-%m-%d") -
      str2time(year & "-" & m & "-01", "%Y-%m-%d")) / 86400;
--------------------------------------------------------------------------------

(model
  (statement
    (param
      (symbolic_name)
      (indexing_expression
        (indexing_entry
          (symbolic_name)
          (expr
            (expr
              (number))
            (expr
              (number)))))
      (attribute)
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (expr
            (expr
              (expr
                (function_call
                  (function_name)
                  (expr
                    (expr
                      (expr
                        (expr
                          (expr
                            (symbolic_name))
                          (operator)
                          (expr
                            (expr
                              (conditional_expression
                                (expr
                                  (expr
                                    (symbolic_name))
                                  (operator)
                                  (expr
                                    (number)))
                                (expr
                                  (number))
                                (expr
                                  (number))))))
                        (operator)
                        (expr
                          (string)))
                      (operator)
                      (expr
                        (expr
                          (conditional_expression
                            (expr
                              (expr
                                (symbolic_name))
                              (operator)
                              (expr
                                (number)))
                            (expr
                              (expr
                                (symbolic_name))
                              (operator)
                              (expr
                                (number)))
                            (expr
                              (number))))))
                    (operator)
                    (expr
                      (string)))
                  (expr
                    (string))))
              (operator)
              (expr
                (function_call
                  (function_name)
                  (expr
                    (expr
                      (expr
                        (expr
                          (symbolic_name))
                        (operator)
                        (expr
                          (string)))
                      (operator)
                      (expr
                        (symbolic_name)))
                    (operator)
                    (expr
                      (string)))
                  (expr
                    (string))))))
          (operator)
          (expr
            (number)))))))
