test/corpus/printf.txt
================================================================================
printf single quoted string
================================================================================
printf 'Hello, world!\n';
--------------------------------------------------------------------------------

(model
  (printf
    (expr
      (string))))

================================================================================
printf double quoted string
================================================================================
printf "Hello, world!\n";
--------------------------------------------------------------------------------

(model
  (printf
    (expr
      (string))))

================================================================================
printf string with quote symbol
================================================================================
printf "Hello, ""world""!\n";
--------------------------------------------------------------------------------

(model
  (printf
    (expr
      (string))))

================================================================================
printf string with comment token
================================================================================
printf '# This is not a comment\n';
--------------------------------------------------------------------------------

(model
  (printf
    (expr
      (string))))

================================================================================
printf formatted output to file
================================================================================
printf: "x = %.3f; y = %.3f; z = %.3f\n", x, y, z > "result.txt";
--------------------------------------------------------------------------------

(model
  (printf
    (expr
      (string))
    (expr
      (symbolic_name))
    (expr
      (symbolic_name))
    (expr
      (symbolic_name))
    (operator)
    (expr
      (string))))

================================================================================
printf domain output to file
================================================================================
printf{i in I, j in J}: "flow from %s to %s is %d\n", i, j, x[i,j]
  >> result_file & ".txt";
--------------------------------------------------------------------------------

(model
  (printf
    (indexing_expression
      (indexing_entry
        (symbolic_name)
        (operator)
        (expr
          (symbolic_name)))
      (indexing_entry
        (symbolic_name)
        (operator)
        (expr
          (symbolic_name))))
    (expr
      (string))
    (expr
      (symbolic_name))
    (expr
      (symbolic_name))
    (expr
      (symbolic_name)
      (subscript
        (expr
          (symbolic_name))
        (expr
          (symbolic_name))))
    (operator)
    (expr
      (expr
        (symbolic_name))
      (operator)
      (expr
        (string)))))

================================================================================
printf value using suffix
================================================================================
printf 'value %s\n', obj.val;
--------------------------------------------------------------------------------

(model
  (printf
    (expr
      (string))
    (expr
      (symbolic_name)
      (suffix))))
